[package]
edition = "2021"
name = "sysproxy-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.13", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
sysproxy = { git = "https://github.com/mihomo-party-org/sysproxy-rs" }

[build-dependencies]
napi-build = "=2.0.1"

[profile.release]
lto = true
strip = "symbols"
